--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Shared/_Layout.cshtml
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-light navbar-expand-sm navbar-toggleable-sm border-bottom box-shadow">
+        <nav class="navbar navbar-light navbar-expand-sm navbar-toggleable-sm">
             <div class="container-md">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">The Budgeteer</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -33,6 +33,7 @@
         </nav>
     </header>
     
+    @*
     <section>
         <div id="sidebar" class="sidebar collapsed">
             <svg id="sidebar-caret" class="sidebar-caret" width="30" height="35" fill="#ffffff" viewBox="0 0 15 15">
@@ -63,6 +64,7 @@
             </div>
         </div>
     </section>
+    *@
     
     <section>
         <div id="action-sidebar">
