--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/wwwroot/css/site.scss
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/wwwroot/css/site.scss
@@ -1,9 +1,9 @@
 ﻿//Variables
 $primary: #020403;
 $secondary: #1c1c1c;
-
-$body-bg: $primary;
 $body-color: white;
+$body-bg: $primary;
+$borderWidth: 4px;
 
 $accordion-bg: $secondary;
 $accordion-button-active-bg: $secondary;
@@ -11,7 +11,9 @@ $accordion-button-active-color: white;
 $accordion-icon-active-color: white;
 $accordion-body-padding-y: 8px;
 $accordion-body-padding-x: 10px;
-
+$accordion-border-radius: 10px;
+$accordion-button-icon: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 15 15' fill='white'%3E%3Cdefs%3E%3CradialGradient id='gradient1' x1='0' x2='1' y1='0' y2='1'%3E%3Cstop offset='0%25' stop-color='%23CCFBE5' /%3E%3Cstop offset='50%25' stop-color='%23A2D6CB' /%3E%3Cstop offset='100%25' stop-color='%237EB1B1' /%3E%3C/radialGradient%3E%3C/defs%3E%3Cpath fill='url(%23gradient1)' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3E%3C/svg%3E");
+$accordion-icon-width: 20px;
 $navbar-light-color: white;
 $navbar-light-brand-color: white;
 
@@ -40,7 +42,7 @@ body {
 }
 
 ::-webkit-scrollbar-thumb {
-    background: white;
+    background: #456977;
     border-radius: 5px;
 }
 
@@ -52,22 +54,38 @@ body {
     box-shadow: white 0 0 0px 2px;
 }
 
+.add-icon {
+    box-sizing: content-box;
+    margin-left: auto;
+    height: 23px;
+    width: 23px;
+}
+
 //Navbar
 
 .navbar {
-    background-color: $secondary;
+    background: linear-gradient(45deg, #CCFBE5, #A2D6CB, #7EB1B1, #608C94, #456977);
     position: fixed;
     width: 100%;
     top: 0px;
     z-index: 100;
 }
 
+.navbar-brand, .nav-link {
+    color: $primary;
+}
+
 .nav-link:hover, .navbar-brand:hover {
-    color: darken(white, 20%);
+    color: lighten($primary, 20%);
 }
 
 #country, .country-name {
     color: black;
+}
+
+#country {
+    border-radius: 5px;
+    border: none;
 }
 
 //Sidebar
@@ -83,7 +101,7 @@ body {
 }
 
 .sidebar-container {
-    margin: 70px 0 0 0;    
+    margin: 70px 0 0 0;
     width: 200px;
     opacity: 1;
     transition: width ease 0.5s, opacity ease-in 0.5s;
@@ -139,8 +157,8 @@ body {
 }
 
 #statistics-button {
-    width: 45px;   
-    height: 45px;   
+    width: 45px;
+    height: 45px;
 }
 
 #wf-button {
@@ -149,6 +167,7 @@ body {
 }
 
 // Menu wheel
+
 #menu-container {
     position: absolute;
     visibility: hidden;
@@ -279,12 +298,13 @@ main {
 
 #statistics-scrollcontainer::after, #home-scrollcontainer::after, #reevalCategories-scrollcontainer::after {
     content: "";
+    left: -5px;
     bottom: 10px;
     display: block;
-    height: 15px;
-    width: calc(100% - 25px);
+    height: 10px;
+    width: calc(100% - 5px);
     position: absolute;
-    background: linear-gradient(180deg, rgba(2,4,3,0.05), rgba(2,4,3,1));
+    background: linear-gradient(180deg, rgba(2,4,3,0.05), 40%, rgba(2,4,3,1));
     z-index: 100;
 }
 
@@ -295,21 +315,33 @@ main {
     overflow: hidden;
 }
 
-#home-scrollcontainer {   
+#home-scrollcontainer {
     height: 100%;
+    margin: 0 5px 0 15px;
     overflow-y: scroll;
 }
 
 #home-container {
-    margin: 10px 5px 10px 0;
+    margin: 10px 10px 10px 5px;
 }
 
 // Reevaluation
 
 #reevaluation {
-    position: relative;
     height: calc(100% - 10px);
     overflow: hidden;
+}
+
+#reevalCategories-scrollcontainer {
+    margin: 0 5px 0 15px;
+    height: 100%;
+    overflow-y: scroll;
+}
+
+#reevalCategories-container {
+    margin: 10px 10px 10px 5px;
+    display: grid;
+    gap: 1rem;
 }
 
 #reevalInfo {
@@ -318,22 +350,30 @@ main {
     left: 50%;
     width: 75%;
     transform: translate(-50%, -50%);
-    text-align: center;
-    margin: 0;
-    padding: 10px;
     border: groove 2px #d3d3d3;
     border-radius: var(--bs-border-radius);
+    text-align: center;
     background-color: $secondary;
 }
 
-#reevalCategories-scrollcontainer {
-    margin: 0 5px 0 15px;
-    height: calc(100% - 20px);
-    overflow-y: scroll;
+#reevalInfo::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: -1;
+    margin: -$borderWidth;
+    border-radius: inherit;
+    background: linear-gradient(45deg, #CCFBE5, #A2D6CB, #7EB1B1, #608C94, #456977);
 }
 
-#reevalCategories-container {
-    margin: 10px 5px 10px 0;
+#reevalInfoText {
+    padding: 10px;
+    text-align: center;
+    margin: 0;
+    background-color: $secondary;
 }
 
 .transaction-body {
@@ -377,7 +417,6 @@ main {
     stroke: white;
     fill: transparent;
 }
-
 // Statistics
 
 .statistics {
@@ -386,24 +425,39 @@ main {
 }
 
 #statistics-scrollcontainer {
-    margin: 0 5px 0 15px;
+    margin: 0 0 0 10px;
     height: 100%;
     overflow-y: scroll;
 }
 
 #statistics-container {
-    margin: 10px 5px 10px 0;
+    margin: 10px 10px 10px 5px;
 }
 
 .Charts-container {
-    border-radius: var(--bs-border-radius);
+    border-radius: 10px;
     margin-top: 10px;
     display: flex;
+    position: relative;
+    background-clip: padding-box;
+    border: solid $borderWidth transparent;
 }
 
+.Charts-container:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: -1;
+    margin: -$borderWidth;
+    border-radius: inherit;
+    background: linear-gradient(45deg, #CCFBE5, #A2D6CB, #7EB1B1, #608C94, #456977);
+}
 
 .lineChart-container {
-    width:100%;
+    width: 100%;
     padding: 2px;
     min-height: 250px;
     background-color: $secondary;
@@ -428,15 +482,33 @@ main {
 }
 
 // Dashboard
+
 .dashboard {
-    border-radius: var(--bs-border-radius);
+    border-radius: 10px;
     padding: 10px;
     background-color: $secondary;
+    position: relative;
+    background-clip: padding-box;
+    border: solid $borderWidth transparent;
+}
+
+.dashboard:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: -1;
+    margin: -$borderWidth;
+    border-radius: inherit;
+    background: linear-gradient(45deg, #CCFBE5, #A2D6CB, #7EB1B1, #608C94, #456977);
 }
 
 .dashboard-container {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+    border-radius: inherit;
 }
 
 .chart-container {
@@ -448,11 +520,37 @@ main {
     display: flex;
     flex-direction: column;
 }
-
 //Accordion
 
 .accordion {
     cursor: pointer;
+    background-clip: padding-box;
+    border: solid $borderWidth transparent;
+    position: relative;
+    border-radius: 10px;
+}
+
+.accordion:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: -1;
+    margin: -$borderWidth;
+    border-radius: inherit;
+    background: linear-gradient(45deg, #CCFBE5, #A2D6CB, #7EB1B1, #608C94, #456977);
+}
+
+.accordion-item {
+    border-radius: 6px !important;
+    border: none;
+}
+
+.accordion-head {
+    display: flex;
+    align-items: center;
 }
 
 .accordion-header {
@@ -524,7 +622,7 @@ main {
     min-width: 180px;
 }
 
-.balance-text{
+.balance-text {
     display: inline-block;
     min-width: 160px;
     text-align: end;
@@ -548,6 +646,7 @@ main {
     text-align: end;
 }
 // Modals
+
 .form-group {
     margin-top: 10px;
 }
