--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Home/Index.cshtml
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Home/Index.cshtml
@@ -80,16 +80,18 @@
                                     <h5 class="accordion-header">
                                         @incomeTotal.ToString("C2", Model.Culture) / @incomeBudget.ToString("C2", Model.Culture)
                                     </h5>
-                                    <svg class="add-icon" fill="none" viewBox="0 0 14 14" height="23" width="23"><g id="plus">
-                                        <defs>
-                                            <radialGradient id="gradient1" x1="0" x2="1" y1="0" y2="1">                                                    
-                                                <stop offset="0%" stop-color="#CCFBE5" />
-                                                <stop offset="50%" stop-color="#A2D6CB" />
-                                                <stop offset="100%" stop-color="#7EB1B1" />
-                                            </radialGradient>
-                                        </defs>
-                                        <path id="Union" fill="url(#gradient1)" fill-rule="evenodd" d="M8 1a1 1 0 0 0 -2 0v5H1a1 1 0 0 0 0 2h5v5a1 1 0 1 0 2 0V8h5a1 1 0 1 0 0 -2H8V1Z" clip-rule="evenodd" stroke-width="1"></path>
-                                    </g></svg>
+                                    <svg class="add-icon" fill="none" viewBox="0 0 14 14" height="23" width="23">
+                                        <g id="plus">
+                                            <defs>
+                                                <radialGradient id="gradient1" x1="0" x2="1" y1="0" y2="1">
+                                                    <stop offset="0%" stop-color="#CCFBE5" />
+                                                    <stop offset="50%" stop-color="#A2D6CB" />
+                                                    <stop offset="100%" stop-color="#7EB1B1" />
+                                                </radialGradient>
+                                            </defs>
+                                            <path id="Union" fill="url(#gradient1)" fill-rule="evenodd" d="M8 1a1 1 0 0 0 -2 0v5H1a1 1 0 0 0 0 2h5v5a1 1 0 1 0 2 0V8h5a1 1 0 1 0 0 -2H8V1Z" clip-rule="evenodd" stroke-width="1"></path>
+                                        </g>
+                                    </svg>
                                     <div class="accordion-caret rotate"></div>
                                 </div>
                                 <div id="collapseIncome" class="accordion-collapse collapse show" aria-labelledby="accordionIncomeHeader">
@@ -278,44 +280,44 @@
 
                         @*
                         <div class="accordion my-2" id="group_3" data-id="3">
-                            <div class="accordion-item">
-                                <div id="accordion-head-savings" class="accordion-head d-flex">
-                                    <h5 class="accordion-header me-auto" id="accordionSavingsHeader">
-                                        Savings
-                                    </h5>
-                                    <h5 class="accordion-header">
-                                        @Model.PageModel.Savings.Sum(c => c.Transactions.Sum(t => t.Amount)).ToString("C2", Model.Culture) / @Model.PageModel.Savings.Sum(c => c.Budget).ToString("C2", Model.Culture)
-                                    </h5>
-                                    <img class="add-icon ms-auto" src="~/img/svg/plus.svg" alt="" width="20px;" />
-                                    <div class="accordion-caret rotate"></div>
-                                </div>
-                                <div id="collapseSavings" class="accordion-collapse collapse show" aria-labelledby="accordionSavingsHeader">
-                                    <div class="accordion-body">
-                                        @foreach (var category in Model.PageModel.Savings)
-                                        {
-                                            var sumTransactions = category.Transactions.Sum(t => t.Amount);
-                                            <div class="category" id="category_@category.Id"
-                                                 data-id="@category.Id"
-                                                 data-name="@Html.Encode(category.Name)"
-                                                 data-budget="@category.Budget.ToString("F2", CultureInfo.InvariantCulture)"
-                                                 data-groupid="@category.GroupId">
-                                                <div class="border-container">
-                                                    <div class="content">
-                                                        <div class="category-body">
-                                                            <div>@Html.Encode(category.Name)</div>
-                                                            <div class="ms-auto">@sumTransactions.ToString("C2", Model.Culture)  / @category.Budget.ToString("C2", Model.Culture)</div>
-                                                        </div>
-                                                        <div class="progress">
-                                                            <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-                                                        </div>
-                                                    </div>
-                                                    <div class="border-animation"></div>
-                                                </div>
-                                            </div>
-                                        }
-                                    </div>
-                                </div>
-                            </div>
+                        <div class="accordion-item">
+                        <div id="accordion-head-savings" class="accordion-head d-flex">
+                        <h5 class="accordion-header me-auto" id="accordionSavingsHeader">
+                        Savings
+                        </h5>
+                        <h5 class="accordion-header">
+                        @Model.PageModel.Savings.Sum(c => c.Transactions.Sum(t => t.Amount)).ToString("C2", Model.Culture) / @Model.PageModel.Savings.Sum(c => c.Budget).ToString("C2", Model.Culture)
+                        </h5>
+                        <img class="add-icon ms-auto" src="~/img/svg/plus.svg" alt="" width="20px;" />
+                        <div class="accordion-caret rotate"></div>
+                        </div>
+                        <div id="collapseSavings" class="accordion-collapse collapse show" aria-labelledby="accordionSavingsHeader">
+                        <div class="accordion-body">
+                        @foreach (var category in Model.PageModel.Savings)
+                        {
+                        var sumTransactions = category.Transactions.Sum(t => t.Amount);
+                        <div class="category" id="category_@category.Id"
+                        data-id="@category.Id"
+                        data-name="@Html.Encode(category.Name)"
+                        data-budget="@category.Budget.ToString("F2", CultureInfo.InvariantCulture)"
+                        data-groupid="@category.GroupId">
+                        <div class="border-container">
+                        <div class="content">
+                        <div class="category-body">
+                        <div>@Html.Encode(category.Name)</div>
+                        <div class="ms-auto">@sumTransactions.ToString("C2", Model.Culture)  / @category.Budget.ToString("C2", Model.Culture)</div>
+                        </div>
+                        <div class="progress">
+                        <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                        </div>
+                        <div class="border-animation"></div>
+                        </div>
+                        </div>
+                        }
+                        </div>
+                        </div>
+                        </div>
                         </div>
                         *@
                     </div>
@@ -553,7 +555,7 @@
                             <div class="overspendingChart-container">
                                 <canvas id="overspendingChart"></canvas>
                             </div>
-                        </div>                        
+                        </div>
                         <div class="Charts-container">
                             <div class="lineChart-container">
                                 <canvas id="totalSpentChart"></canvas>
@@ -564,10 +566,50 @@
             </div>
         </div>
         <div class="flip-content" style="--s:3">
-            <div id="wf" class="wf border">
-                <h1 class="wf-header">WF</h1>
-                <div id="wf-scrollcontainer">
-                    <div id="wf-container">
+            <div id="search">
+                <div id="search-scrollcontainer">
+                    <div id="search-container">
+                        <div class="filter-container">
+                            <form id="search-form">
+                                <div class="d-flex mb-3">
+                                    <svg class="my-2 me-2" id="search-button" fill="#000000" version="1.1"
+                                         width="45px" height="45px" viewBox="0 0 24 24">
+                                        <path d="M11 6C13.7614 6 16 8.23858 16 11M16.6588 16.6549L21 21M19 11C19 15.4183 15.4183 19 11 19C6.58172 19 3 15.4183 3 11C3 6.58172 6.58172 3 11 3C15.4183 3 19 6.58172 19 11Z" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                                    </svg>
+                                    <input asp-for="PageModel.Search.SearchString" class="form-control w-100 my-2" id="transaction-search" type="text" />
+                                </div>
+                                <div id="filter-accordion" class="accordion mb-4">
+                                    <div class="accordion-item">
+                                        <div class="accordion-head">
+                                            <h3 class="accordion-header me-auto">Filters</h3>
+                                            <div class="accordion-caret rotate"></div>
+                                        </div>
+                                        <div id="collapseFilters" class="accordion-collapse collapse show" aria-labelledby="filterHeader">
+                                            <div class="accordion-body">
+                                                <div class="form-group mb-1">
+                                                    <label id="category_search-label" class="me-2" for="CategoryId">Category</label>
+                                                    <select class="me-4" asp-for="PageModel.Search.CategoryId" asp-items="Model.PageModel.Search.Categories" aria-labelledby="category_search-label">
+                                                        <option value="">All</option>
+                                                    </select>
+                                                </div>
+                                                <div class="text-center">
+                                                    <div id="releaseDate-label" class="mt-2 strong">Release Date</div>
+                                                    <div class="d-flex">
+                                                        <input id="minAmount" type="text" class="range-input h-50 me-4" value="" data-min="@Model.PageModel.Search.MinAmount" aria-label="Year range start" />
+                                                        <input asp-for="PageModel.Search.AmountRange" type="text" class="range-slider" id="yearRange" aria-label="Year range slider text input" />
+                                                        <input id="maxAmount" type="text" class="range-input h-50 ms-4" value="" data-max="@Model.PageModel.Search.MaxAmount" aria-label="Year range end" />
+                                                    </div>
+                                                </div>
+                                                <div class="text-center mt-2">
+                                                    <input class="search-btn" type="submit" value="Filter" />
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                </div>
+                            </form>
+                        </div>
                     </div>
                 </div>
             </div>
