--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Shared/_Layout.cshtml
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>                        
+                        </li>
                     </ul>
                 </div>
                 <div class="ms-auto">
@@ -29,43 +29,43 @@
                     <input type="hidden" id="country_code" />
                 </div>
             </div>
-            
+
         </nav>
     </header>
-    
+
     @*
     <section>
-        <div id="sidebar" class="sidebar collapsed">
-            <svg id="sidebar-caret" class="sidebar-caret" width="30" height="35" fill="#ffffff" viewBox="0 0 15 15">
-                <path d="M3.204 5h9.592L8 10.481zm-.753.659 4.796 5.48a1 1 0 0 0 1.506 0l4.796-5.48c.566-.647.106-1.659-.753-1.659H3.204a1 1 0 0 0-.753 1.659" />
-            </svg>
-            <div id="sidebar-container" class="sidebar-container">
-                <div class="sidebar-category">
-                    <h5>Budget</h5>
-                    <ul>
-                        <li>Add New Budget</li>
-                        <li>Edit Budget</li>
-                        <li>Delete Budget</li>
-                    </ul>
-                    <h5>Categories</h5>
-                    <ul>
-                        <li data-bs-toggle="modal" data-bs-target="#add-category-modal">Add New Category</li>
-                        <li>Edit Category</li>
-                        <li>Delete Category</li>
-                    </ul>
-                    <h5>Display</h5>
-                    <ul>
-                        <li>Locale</li>
-                        <li>Locale</li>
-                        <li>Currency</li>
-                        <li>Other Settings</li>
-                    </ul>
-                </div>
-            </div>
-        </div>
+    <div id="sidebar" class="sidebar collapsed">
+    <svg id="sidebar-caret" class="sidebar-caret" width="30" height="35" fill="#ffffff" viewBox="0 0 15 15">
+    <path d="M3.204 5h9.592L8 10.481zm-.753.659 4.796 5.48a1 1 0 0 0 1.506 0l4.796-5.48c.566-.647.106-1.659-.753-1.659H3.204a1 1 0 0 0-.753 1.659" />
+    </svg>
+    <div id="sidebar-container" class="sidebar-container">
+    <div class="sidebar-category">
+    <h5>Budget</h5>
+    <ul>
+    <li>Add New Budget</li>
+    <li>Edit Budget</li>
+    <li>Delete Budget</li>
+    </ul>
+    <h5>Categories</h5>
+    <ul>
+    <li data-bs-toggle="modal" data-bs-target="#add-category-modal">Add New Category</li>
+    <li>Edit Category</li>
+    <li>Delete Category</li>
+    </ul>
+    <h5>Display</h5>
+    <ul>
+    <li>Locale</li>
+    <li>Locale</li>
+    <li>Currency</li>
+    <li>Other Settings</li>
+    </ul>
+    </div>
+    </div>
+    </div>
     </section>
     *@
-    
+
     <section>
         <div id="action-sidebar">
             <div class="sidebar-button-container" data-index="0">
@@ -82,51 +82,43 @@
                 </svg>
             </div>
             <div class="sidebar-button-container" data-index="2">
-                <svg id="statistics-button" fill="#ffffff" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                <svg id="statistics-button" fill="#ffffff" version="1.1"
                      viewBox="0 0 60 60" xml:space="preserve">
-                    <g>
-                        <g>
-                            <path d="M60,11c0-0.1,0-0.2-0.1-0.3v-0.1c-0.1-0.1-0.1-0.2-0.2-0.3l-10-10c-0.1-0.1-0.2-0.1-0.3-0.2h-0.1C49.2,0.1,49.1,0,49,0
+                <g>
+                <g>
+                <path d="M60,11c0-0.1,0-0.2-0.1-0.3v-0.1c-0.1-0.1-0.1-0.2-0.2-0.3l-10-10c-0.1-0.1-0.2-0.1-0.3-0.2h-0.1C49.2,0.1,49.1,0,49,0
 			                l0,0H1C0.4,0,0,0.4,0,1v50c0,0.6,0.4,1,1,1h4v-2H2v-3h3v-2H2V2h46v9c0,0.6,0.4,1,1,1h9v33h-4v2h4v3h-4v2h5c0.6,0,1-0.4,1-1V11
 			                L60,11z M50,10V3.4l6.6,6.6H50z" />
-                            <path d="M51,25c0-0.6-0.4-1-1-1h-8c-0.6,0-1,0.4-1,1v33h-3V37c0-0.6-0.4-1-1-1h-8c-0.6,0-1,0.4-1,1v21h-3V47c0-0.6-0.4-1-1-1h-8
+                <path d="M51,25c0-0.6-0.4-1-1-1h-8c-0.6,0-1,0.4-1,1v33h-3V37c0-0.6-0.4-1-1-1h-8c-0.6,0-1,0.4-1,1v21h-3V47c0-0.6-0.4-1-1-1h-8
 			                c-0.6,0-1,0.4-1,1v11h-5V22H8v37c0,0.6,0.4,1,1,1h7h8h5h8h5h8h6v-2h-5V25z M49,26v3h-6v-3H49z M36,38v3h-6v-3H36z M23,48v3h-6v-3
 			                H23z M17,58v-5h6v5H17z M30,58V43h6v15H30z M43,58V31h6v27H43z" />
-                            <rect x="5" y="5" width="6" height="2" />
-                            <rect x="5" y="9" width="14" height="2" />
-                            <rect x="5" y="13" width="2" height="2" />
-                            <rect x="9" y="13" width="2" height="2" />
-                            <rect x="13" y="13" width="2" height="2" />
-                            <path d="M15.8,34.7L38,12.5V16h2v-6c0-0.6-0.4-1-1-1h-6v2h3.6L14.3,33.3L15.8,34.7z" />
-                            <rect x="15" y="42" width="2" height="2" />
-                            <rect x="19" y="42" width="2" height="2" />
-                            <rect x="19" y="38" width="2" height="2" />
-                            <rect x="32" y="28" width="2" height="2" />
-                            <rect x="45" y="16" width="2" height="2" />
-                            <rect x="23" y="42" width="2" height="2" />
-                            <rect x="28" y="32" width="2" height="2" />
-                            <rect x="32" y="32" width="2" height="2" />
-                            <rect x="36" y="32" width="2" height="2" />
-                            <rect x="41" y="20" width="2" height="2" />
-                            <rect x="45" y="20" width="2" height="2" />
-                            <rect x="49" y="20" width="2" height="2" />
+                <rect x="5" y="5" width="6" height="2" />
+                <rect x="5" y="9" width="14" height="2" />
+                <rect x="5" y="13" width="2" height="2" />
+                <rect x="9" y="13" width="2" height="2" />
+                <rect x="13" y="13" width="2" height="2" />
+                <path d="M15.8,34.7L38,12.5V16h2v-6c0-0.6-0.4-1-1-1h-6v2h3.6L14.3,33.3L15.8,34.7z" />
+                <rect x="15" y="42" width="2" height="2" />
+                <rect x="19" y="42" width="2" height="2" />
+                <rect x="19" y="38" width="2" height="2" />
+                <rect x="32" y="28" width="2" height="2" />
+                <rect x="45" y="16" width="2" height="2" />
+                <rect x="23" y="42" width="2" height="2" />
+                <rect x="28" y="32" width="2" height="2" />
+                <rect x="32" y="32" width="2" height="2" />
+                <rect x="36" y="32" width="2" height="2" />
+                <rect x="41" y="20" width="2" height="2" />
+                <rect x="45" y="20" width="2" height="2" />
+                <rect x="49" y="20" width="2" height="2" />
                         </g>
                     </g>
                 </svg>
             </div>
             <div class="sidebar-button-container" data-index="3">
-                <svg id="wf-button" viewBox="0 0 79.113281 56.369141"
-                     version="1.1"
-                     width="79.113281"
-                     height="56.369141"
-                     xmlns="http://www.w3.org/2000/svg"
-                     xmlns:svg="http://www.w3.org/2000/svg">
-
-                    <path id="Path"
-                          d="M 31.92187,3.125e-7 22.44922,35.871093 18.28125,16.703125 H -3.2867432e-7 L 12.0293,56.36914 H 32.20508 L 40.25781,24.482421 48.30859,56.36914 H 69.43164 L 79.11328,16.703125 H 62.13281 L 58.06445,35.871093 48.59375,3.125e-7 Z"
-                          style="fill:#ffffff;fill-opacity:1" />
+                <svg id="search-button" fill="#000000" version="1.1"
+                    width="45px" height="45px" viewBox="0 0 24 24">
+                    <path d="M11 6C13.7614 6 16 8.23858 16 11M16.6588 16.6549L21 21M19 11C19 15.4183 15.4183 19 11 19C6.58172 19 3 15.4183 3 11C3 6.58172 6.58172 3 11 3C15.4183 3 19 6.58172 19 11Z" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
                 </svg>
-
             </div>
         </div>
     </section>
