--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/wwwroot/css/site.scss
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/wwwroot/css/site.scss
@@ -161,9 +161,9 @@ body {
     height: 45px;
 }
 
-#wf-button {
+#search-button {
     width: 45px;
-    height: 50px;
+    height: 45px;
 }
 
 // Menu wheel
@@ -285,7 +285,7 @@ main {
     transform: rotateY(calc(90deg * var(--s))) translateZ(calc(50cqw));
 }
 
-#statistics-scrollcontainer::before, #home-scrollcontainer::before, #reevalCategories-scrollcontainer::before {
+#statistics-scrollcontainer::before, #home-scrollcontainer::before, #reevalCategories-scrollcontainer::before, #search-scrollcontainer::before {
     content: "";
     left: -5px;
     display: block;
@@ -296,7 +296,7 @@ main {
     z-index: 100;
 }
 
-#statistics-scrollcontainer::after, #home-scrollcontainer::after, #reevalCategories-scrollcontainer::after {
+#statistics-scrollcontainer::after, #home-scrollcontainer::after, #reevalCategories-scrollcontainer::after, #search-scrollcontainer::after {
     content: "";
     left: -5px;
     bottom: 10px;
@@ -472,14 +472,45 @@ main {
     border-radius: var(--bs-border-radius);
 }
 
-// WF
+// Search Transactions
 
-.wf {
+#search{
     height: calc(100% - 10px);
-    border-radius: var(--bs-border-radius);
-    background-color: $secondary;
     overflow: hidden;
 }
+
+#search-scrollcontainer {
+    margin: 0 0 0 10px;
+    height: 100%;
+    overflow-y: scroll;
+}
+
+#search-container {
+    margin: 10px 10px 10px 5px;
+}
+
+.filter-container {
+    position: relative;
+    padding: 10px;
+    border-radius: 10px;
+    background-clip: padding-box;
+    background-color: $secondary;
+    border: solid $borderWidth transparent;
+}
+
+.filter-container::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: -1;
+    margin: -$borderWidth;
+    border-radius: inherit;
+    background: linear-gradient(45deg, #CCFBE5, #A2D6CB, #7EB1B1, #608C94, #456977);
+}
+
 
 // Dashboard
 
@@ -520,6 +551,7 @@ main {
     display: flex;
     flex-direction: column;
 }
+
 //Accordion
 
 .accordion {
@@ -573,6 +605,7 @@ main {
 .rotate {
     transform: rotate(180deg);
 }
+
 // Category
 
 .border-container {
@@ -633,6 +666,7 @@ main {
     z-index: 10;
     height: 0.4rem;
 }
+
 // Transaction (Details)
 
 .transaction-date {
@@ -645,6 +679,7 @@ main {
     min-width: 80px;
     text-align: end;
 }
+
 // Modals
 
 .form-group {
