--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Home/Index.cshtml
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Home/Index.cshtml
@@ -21,6 +21,12 @@
     var overspending = expensesPerCategory.Sum(c => Math.Max(0, c.sumOfTransactions - c.category.Budget));
 }
 
+@section Stylesheets {
+    @{
+        <link rel="stylesheet" href="~/lib/node_modules/ion-rangeslider/css/ion.rangeSlider.min.css" asp-append-version="true">
+    }
+}
+
 <section>
     <div id="menu-container" data-category="0">
         <div id="menu" class="menu">
@@ -578,29 +584,52 @@
                                     </svg>
                                     <input asp-for="PageModel.Search.SearchString" class="form-control w-100 my-2" id="transaction-search" type="text" />
                                 </div>
-                                <div id="filter-accordion" class="accordion mb-4">
+                                <div id="filter-accordion" class="accordion mb-1">
                                     <div class="accordion-item">
                                         <div class="accordion-head">
-                                            <h3 class="accordion-header me-auto">Filters</h3>
+                                            <h2 class="accordion-header me-auto">Filters</h2>
                                             <div class="accordion-caret rotate"></div>
                                         </div>
                                         <div id="collapseFilters" class="accordion-collapse collapse show" aria-labelledby="filterHeader">
                                             <div class="accordion-body">
                                                 <div class="form-group mb-1">
                                                     <label id="category_search-label" class="me-2" for="CategoryId">Category</label>
-                                                    <select class="me-4" asp-for="PageModel.Search.CategoryId" asp-items="Model.PageModel.Search.Categories" aria-labelledby="category_search-label">
+                                                    <select class="category-select" asp-for="PageModel.Search.CategoryId" asp-items="Model.PageModel.Categories" aria-labelledby="category_search-label">
                                                         <option value="">All</option>
                                                     </select>
                                                 </div>
                                                 <div class="text-center">
-                                                    <div id="releaseDate-label" class="mt-2 strong">Release Date</div>
-                                                    <div class="d-flex">
-                                                        <input id="minAmount" type="text" class="range-input h-50 me-4" value="" data-min="@Model.PageModel.Search.MinAmount" aria-label="Year range start" />
-                                                        <input asp-for="PageModel.Search.AmountRange" type="text" class="range-slider" id="yearRange" aria-label="Year range slider text input" />
-                                                        <input id="maxAmount" type="text" class="range-input h-50 ms-4" value="" data-max="@Model.PageModel.Search.MaxAmount" aria-label="Year range end" />
+                                                    <h5 id="Date-label" class="mt-3">Transaction Date</h5>
+                                                    <div class="dates-container">
+                                                        <div class="date-container">
+                                                            <span>From: </span>
+                                                            <input asp-for="PageModel.Search.MinDate" id="minDate" class="form-control" value="" aria-label="Transaction date range start" />
+                                                        </div>
+                                                        <div class="date-container">
+                                                            <span>To: </span>
+                                                            <input asp-for="PageModel.Search.MaxDate" id="maxDate" class="form-control" value="" aria-label="Transaction date range end" />
+                                                        </div>
+
+                                                    </div>
+                                                    <div>
+                                                        <span class="mx-auto" asp-validation-for="PageModel.Search.MinDate" class="text-danger"></span>
+                                                        <span class="mx-auto" asp-validation-for="PageModel.Search.MaxDate" class="text-danger"></span>
                                                     </div>
                                                 </div>
-                                                <div class="text-center mt-2">
+                                                <div class="text-center">
+                                                    <h5 id="releaseDate-label" class="mt-3">Transaction Value</h5>
+                                                    <div class="slider-container">
+                                                        <input asp-for="PageModel.Search.MinAmount" id="minAmount" class="range-input h-50 me-4" value="" aria-label="Transaction value range start" />
+                                                        <input type="text" class="range-slider" id="amountRange" aria-label="Transaction value range slider text input" />
+                                                        <input asp-for="PageModel.Search.MaxAmount" id="maxAmount" class="range-input h-50 ms-4" value="" aria-label="Transaction value range end" />
+
+                                                    </div>
+                                                    <div>
+                                                        <span asp-validation-for="PageModel.Search.MinAmount" class="text-danger"></span>
+                                                        <span asp-validation-for="PageModel.Search.MaxAmount" class="text-danger"></span>
+                                                    </div>
+                                                </div>
+                                                <div class="text-center mt-4">
                                                     <input class="search-btn" type="submit" value="Filter" />
                                                 </div>
                                             </div>
@@ -625,6 +654,7 @@
 @section Scripts {
     @{
         <script src="~/lib/node_modules/chart.js/dist/chart.umd.js"></script>
+        <script src="~/lib/node_modules/ion-rangeslider/js/ion.rangeSlider.min.js"></script>
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
         <script src="~/js/index.js" asp-append-version="true"></script>
     }
