--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/wwwroot/css/site.css
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/wwwroot/css/site.css
@@ -12375,6 +12375,63 @@ main {
   background: linear-gradient(45deg, #CCFBE5, #A2D6CB, #7EB1B1, #608C94, #456977);
 }
 
+.category-select {
+  min-width: 50px;
+  border-radius: var(--bs-border-radius);
+}
+
+.irs {
+  flex-grow: 1;
+  margin-right: 5px;
+}
+
+.irs-from, .irs-to, .irs-single {
+  background-color: #CCFBE5 !important;
+  border-radius: 10px;
+  color: black !important;
+}
+
+.irs-bar {
+  background-color: #CCFBE5 !important;
+}
+
+.irs-handle {
+  border: 3px solid #CCFBE5 !important;
+}
+
+.irs--square .irs-handle {
+  background-color: #456977 !important;
+}
+
+#maxAmount, #minAmount {
+  max-width: 75px;
+  text-align: center;
+  border-radius: var(--bs-border-radius);
+}
+
+#minDate, #maxDate {
+  max-width: 150px;
+  border-radius: var(--bs-border-radius);
+}
+
+.dates-container {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.date-container {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  gap: 15px;
+}
+
+.slider-container {
+  display: flex;
+  align-items: center;
+}
+
 .dashboard {
   border-radius: 10px;
   padding: 10px;
